# django-tasks

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
djangotasks/: __init__.py  models.py  signals.py  tests.py
djangotasks.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
djangotasks/management/commands/: runtask.py  taskd.py
djangotasks/migrations/: 0001_initial.py  0002_auto__add_functiontask.py  0002_testmodel.py  0003_auto__chg_field_functiontask_function_name.py  0003_dependents.py
djangotasks/utils/: daemonize.py
