[tool.poetry]
name = "djangotasks"
version = "1.0"
description = "Django-tasks is an asynchronous task management daemon, to execute long-running batch tasks (minutes, hours or even days) for Django applications."
authors = ["Alex Davies <traverse.da@gmail.com>"]
license = ""

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
